force-app/main/default/objects/Login_History__c/Login_History__c.object-meta.xml
<CustomObject>
    <description>This Object use for log user login history daily</description>
    <label>Login History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>User ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>