force-app/main/default/objects/Login_History__c/fields/ApiType__c.field-meta.xml
<CustomField>
    <fullName>ApiType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ApiType</label>
    <length>200</length>
    <type>Text</type>
</CustomField>