force-app/main/default/objects/Login_History__c/fields/ApiVersion__c.field-meta.xml
<CustomField>
    <fullName>ApiVersion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ApiVersion</label>
    <length>200</length>
    <type>Text</type>
</CustomField>