force-app/main/default/objects/Login_History__c/fields/ClientVersion__c.field-meta.xml
<CustomField>
    <fullName>ClientVersion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Version</label>
    <length>200</length>
    <type>Text</type>
</CustomField>