force-app/main/default/objects/Login_History__c/fields/CreateDate_Date__c.field-meta.xml
<CustomField>
    <fullName>CreateDate_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CreateDate Date</label>
    <type>Date</type>
</CustomField>