force-app/main/default/objects/Login_History__c/fields/Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Login_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Login URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>