force-app/main/default/objects/Login_History__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Platform</label>
    <length>200</length>
    <type>Text</type>
</CustomField>