force-app/main/default/objects/Login_History__c/fields/User_Login_History__c.field-meta.xml
<CustomField>
    <fullName>User_Login_History__c</fullName>
    <label>User</label>
    <referenceTo>User_Login_History__c</referenceTo>
    <relationshipLabel>Login Histories</relationshipLabel>
    <relationshipName>Login_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>